Contact section finish

--- a/contact.html
+++ b/contact.html
@@ -145,8 +145,8 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="box-media">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-app-development"></i></a></div>
-                                                    <div class="box-contact"><a href="#" class="title">Contact Us</a>
+                                                    <div class="box-icon"><p class="icons"><i class="alab-app-development"></i></p></div>
+                                                    <div class="box-contact"><p class="title">Contact Us</p>
                                                         <div class="text">Contact us for anything: Question, concern, tech support, love advice . . we are here.</div>
                                                         <div class="border-box-contact"></div>
                                                         <div class="item"><i class="fa fa-map-marker"></i>
