--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         -->
                         <!--==========================
                             MESSAGE
-                        ============================
+                        ============================-->
                         <section class="contact layout-1">
                             <div class="container">
                                 <div class="row banner">
@@ -647,21 +647,26 @@
                                     </div>
                                     <div class="col-sm-8 banner-left">
                                         <div class="banner-content">
-                                            <div class="title">Let's start a <span>new project</span> together!</div>
-                                            <form action="assets/php/contact.php" method="post" class="form-contact" novalidate>
-                                                <div class="form-group">
-                                                    <input type="text" name="name" placeholder="Name" class="form-control" required>
+                                            <div class="box-media">
+                                                <div class="title">Let's start a <span>new project</span> together!</div>
+                                                <div class="box-icon">
+                                                    <p class="icons"><i class="alab-app-development"></i></p>
                                                 </div>
-                                                <div class="form-group">
-                                                    <input type="email" name="email" placeholder="Email" class="form-control" required>
+                                                <div class="box-contact">
+                                                    <p class="title">Contact Us</p>
+                                                    <div style="color:white;">Consult, question, concern, tech support, love advice . . we are here.</div>
+                                                    <div class="border-box-contact"></div>
+                                                    <div class="item"><i class=" fa fa-map-marker"></i>
+                                                        <p style="color:white;">11519 Craig Ct, St.Louis, MO 63146</p>
+                                                    </div>
+                                                    <div class="item"><i class=" fa fa-phone"></i>
+                                                        <p style="color:white;">(314)288-9810</p>
+                                                    </div>
+                                                    <div class="item"><i class=" fa fa-envelope-o"></i>
+                                                        <p><a href="mailto:markmurphy@nerdism.io" style="color:white;">Info@Nerdism.io</a></p>
+                                                    </div>
                                                 </div>
-                                                <div class="form-group">
-                                                    <textarea rows="5" name="message" placeholder="Message" class="form-control" required></textarea>
-                                                </div>
-                                                <button type="submit" class="btn btn-main btn-danger">Submit Message</button>
-                                                <input type="hidden" name="submitted" id="submitted" value="true" />
-
-                                            </form>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -701,8 +706,12 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">11519 Craig Ct., St. Louis, MO 63146</a></li>
-                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">(314) 288-9810 </a></li>
+                                                        <li><i class="icons fa fa-map-marker"></i>
+                                                            <p class="link">11519 Craig Ct., St. Louis, MO 63146</p>
+                                                        </li>
+                                                        <li><i class="icons fa fa-phone"></i>
+                                                            <p class="link">(314) 288-9810 </p>
+                                                        </li>
                                                         <li><i class="icons fa fa-envelope-o"></i><a href="mailto:markmurphy@nerdism.io" class="link">info@nerdism.io</a></li>
                                                     </ul>
                                                 </div>
