--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                                                         <p class="title">Software</p>
                                                                     </div>
                                                                     <div class="box-info">
-                                                                        <div class="text">We can design, develop new application software, or edit and make existing software better.</div>
+                                                                        <div class="text">We can design and develop new application software, or edit and make existing software better.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -296,7 +296,7 @@
                                                     <div class="row">
                                                         <div class="col-sm-4">
                                                             <div class="box-item box-item-1">
-                                                                <div class="box-heading">Skill We Have</div>
+                                                                <div class="box-heading">Skills We Have</div>
                                                                 <div class="box-info">
                                                                     <div class="group-progress-bar-list">
                                                                         <div class="progress-item">
@@ -371,6 +371,7 @@
                                 <div class="clearfix"> </div>
                             </div>
                         </section>
+
                         <!--================
                             FUN FACTS
                         =================-->
@@ -487,7 +488,9 @@
                                                     <div class="row group-list">
                                                         <div class="col-sm-6">
                                                             <div class="box-media">
-                                                                <div class="box-icon"><a href="#" class="title">New Logo</a></div>
+                                                                <div class="box-icon">
+                                                                    <p class="title">New Logo</p>
+                                                                </div>
                                                                 <div class="box-info">
                                                                     <div class="text">The new logo exemplifies the direction of the company.</div>
                                                                 </div>
@@ -495,7 +498,9 @@
                                                         </div>
                                                         <div class="col-sm-6">
                                                             <div class="box-media">
-                                                                <div class="box-icon"><a href="#" class="title">Website</a></div>
+                                                                <div class="box-icon">
+                                                                    <p class="title">Website</p>
+                                                                </div>
                                                                 <div class="box-info">
                                                                     <div class="text">A redesigned and branded website built to be friendly to the end user.</div>
                                                                 </div>
@@ -503,7 +508,9 @@
                                                         </div>
                                                         <div class="col-sm-6">
                                                             <div class="box-media">
-                                                                <div class="box-icon"><a href="#" class="title">Marketing Materials</a></div>
+                                                                <div class="box-icon">
+                                                                    <p class="title">Marketing Materials</p>
+                                                                </div>
                                                                 <div class="box-info">
                                                                     <div class="text">Rebranded all corporate material (business cards, envelopes, letterhead) to include new eye catching designs in order to stand out.</div>
                                                                 </div>
@@ -511,7 +518,9 @@
                                                         </div>
                                                         <div class="col-sm-6">
                                                             <div class="box-media">
-                                                                <div class="box-icon"><a href="#" class="title">Ease of use</a></div>
+                                                                <div class="box-icon">
+                                                                    <p class="title">Ease of use</p>
+                                                                </div>
                                                                 <div class="box-info">
                                                                     <div class="text">All new items were designed and developed as a collaboration between ECOscape and Nerdism. Working hand in hand to make something truly special.</div>
                                                                 </div>
