--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="wrapper-content">
-          <!--==================
+            <!--==================
                 HEADER
           ===================-->
             <header>
@@ -101,11 +101,11 @@
                     </div>
                 </div>
             </header>
-            <!-- WRAPPER-->
+            <!--==== WRAPPER ====-->
             <div id="wrapper-content">
-                <!-- PAGE WRAPPER-->
+                <!--==== PAGE WRAPPER ====-->
                 <div id="page-wrapper">
-                    <!-- MAIN CONTENT-->
+                    <!--==== MAIN CONTENT =====-->
                     <div class="main-content">
                         <section class="page-title layout-1 page-about-us">
                             <div class="page-title-wrapper">
@@ -127,6 +127,10 @@
                                 </div>
                             </div>
                         </section>
+
+                        <!--===================
+                             WHO. WHAT. WHY 
+                         ==================-->
                         <section class="about-us layout-4 padding-top-100 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="container">
@@ -157,6 +161,10 @@
                                 <div class="clearfix"> </div>
                             </div>
                         </section>
+
+                        <!--======================
+                            OFFICE ENVIRONMENT
+                        =======================-->
                         <section class="slide-vertical layout-1 padding-top-100 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="container">
@@ -179,6 +187,10 @@
                                 <div class="clearfix"> </div>
                             </div>
                         </section>
+
+                        <!--===================
+                            WHY CHOOSE
+                        =====================-->
                         <section class="why-us layout-1 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="box-content box-content-left">
@@ -255,6 +267,10 @@
                                 <div class="clearfix"> </div>
                             </div>
                         </section>
+
+                        <!--===================
+                            CLIENT TALK 
+                        =====================-->
                         <section class="our-client layout-2 padding-top-100 padding-bottom-100">
                             <div class="container">
                                 <div class="group-wrapper">
@@ -292,6 +308,10 @@
                                 </div>
                             </div>
                         </section>
+
+                        <!--=================
+                            CLIENT LOGOS
+                        ===================-->
                         <section class="slide-logo padding-bottom-100">
                             <div class="container">
                                 <div class="row">
@@ -323,7 +343,9 @@
                     </div>
                 </div>
             </div>
-            <!-- FOOTER-->
+            <!--============
+                 FOOTER
+            =============-->
             <footer>
                 <div class="footer-wrapper">
                     <div class="footer-main">
@@ -336,7 +358,7 @@
                                             <div class="content-widget">
                                                 <div class="text">NERDISM - (noun)</div>
                                                 <div class="text">The practices or behaviors of nerds; nerdiness.</div>
-                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
+                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/Nerdism_io" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -346,8 +368,12 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">11519 Craig Ct, St. Louis, MO 63146</a></li>
-                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">(314) 288-9810</a></li>
+                                                        <li><i class="icons fa fa-map-marker"></i>
+                                                            <p class="link">11519 Craig Ct, St. Louis, MO 63146</p>
+                                                        </li>
+                                                        <li><i class="icons fa fa-phone"></i>
+                                                            <p class="link">(314) 288-9810</p>
+                                                        </li>
                                                         <li><i class="icons fa fa-envelope-o"></i><a href="mailto:MarkMurphy@Nerdism.io" class="link">Info@Nerdism.io</a></li>
                                                     </ul>
                                                 </div>
