--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                                             <div class="group-title group-title-1 group-heading">
                                                 <h2 class="main-title">Contact us <span class="dot"></span> <span class="mute-title">Contact Us</span></h2>
                                                 <ol class="breadcrumb">
-                                                    <li><a href="#">Home</a></li>
+                                                    <li><a href="index.html">Home</a></li>
                                                     <li class="active">Contact us</li>
                                                 </ol>
                                             </div>
@@ -145,8 +145,11 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="box-media">
-                                                    <div class="box-icon"><p class="icons"><i class="alab-app-development"></i></p></div>
-                                                    <div class="box-contact"><p class="title">Contact Us</p>
+                                                    <div class="box-icon">
+                                                        <p class="icons"><i class="alab-app-development"></i></p>
+                                                    </div>
+                                                    <div class="box-contact">
+                                                        <p class="title">Contact Us</p>
                                                         <div class="text">Contact us for anything: Question, concern, tech support, love advice . . we are here.</div>
                                                         <div class="border-box-contact"></div>
                                                         <div class="item"><i class="fa fa-map-marker"></i>
@@ -220,7 +223,7 @@
                                             <div class="content-widget">
                                                 <div class="text">NERDISM - (noun)</div>
                                                 <div class="text">The practices or behaviors of nerds; nerdiness.</div>
-                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
+                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/Nerdism_io" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -230,8 +233,12 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">11519 Craig Ct, St.Louis, MO 63146</a></li>
-                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">(314)288-9810</a></li>
+                                                        <li><i class="icons fa fa-map-marker"></i>
+                                                            <p class="link">11519 Craig Ct, St.Louis, MO 63146</p>
+                                                        </li>
+                                                        <li><i class="icons fa fa-phone"></i>
+                                                            <p class="link">(314)288-9810</p>
+                                                        </li>
                                                         <li><i class="icons fa fa-envelope-o"></i><a href="mailto:MarkMurphy@Nerdism.io" class="link">Info@Nerdism.io</a></li>
                                                     </ul>
                                                 </div>
