--- a/services.html
+++ b/services.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <title>Nerdism | What We Do</title>
+    <title>Nerdism | Services</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- FONT CSS-->
+    <!--==== FONT / ICONS ====-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link type="text/css" rel="stylesheet" href="assets/libs/animate.css/animate.css">
     <link type="text/css" rel="stylesheet" href="assets/font/font-icon/font-awesome/css/font-awesome.css">
     <link type="text/css" rel="stylesheet" href="assets/font/font-icon/alabicon/style.css">
-    <!-- LIBRARY CSS-->
+    <!--==== LIBRARY CSS ====-->
     <link type="text/css" rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/slick-slider/slick.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/slick-slider/slick-theme.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/fancybox/source/helpers/jquery.fancybox-thumbs.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/fancybox/source/jquery.fancybox.css">
-    <!-- STYLE CSS-->
+    <!--==== STYLE CSS ====-->
     <link type="text/css" rel="stylesheet" href="assets/css/layout.css">
     <link type="text/css" rel="stylesheet" href="assets/css/components.css">
     <link type="text/css" rel="stylesheet" href="assets/css/responsive.css">
@@ -25,7 +25,7 @@
 
 <body>
     <div class="body-wrapper">
-        <!-- PAGE LOADER-->
+        <!--==== PAGE LOADER ====-->
         <div class="preload">
             <div class="logo-container"><img src="assets/img/logo-transparent.png" alt="" class="logo">
                 <div class="logo-curtain">
@@ -34,7 +34,9 @@
             </div>
         </div>
         <div class="wrapper-content">
-            <!-- HEADER-->
+            <!--=============
+                HEADER
+            ===============-->
             <header>
                 <div class="bg-secondary header header-in-page">
                     <div class="header-main">
@@ -69,7 +71,7 @@
                                                     <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                                     <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
                                                     <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
-                                                </li>
+
                                             </ul>
                                         </div>
                                     </div>
@@ -116,7 +118,7 @@
                                             <div class="group-title group-title-1 group-heading">
                                                 <h2 class="main-title">Services <span class="dot"></span> <span class="mute-title">Work</span></h2>
                                                 <ol class="breadcrumb">
-                                                    <li><a href="#">Home</a></li>
+                                                    <li><a href="index.html">Home</a></li>
                                                     <li class="active">Services </li>
                                                 </ol>
                                             </div>
@@ -142,13 +144,19 @@
                                         <div class="row">
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><p class="icons"><i class="alab-ux-ui"></i></p></div><p class="title">Design</p>
+                                                    <div class="box-icon">
+                                                        <p class="icons"><i class="alab-ux-ui"></i></p>
+                                                    </div>
+                                                    <p class="title">Design</p>
                                                     <div class="text">We will work with you to take your vision and make it a reality.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><p class="icons"><i class="alab-web-developing"></i></p></div><p href="#" class="title">Web Development</p>
+                                                    <div class="box-icon">
+                                                        <p class="icons"><i class="alab-web-developing"></i></p>
+                                                    </div>
+                                                    <p href="#" class="title">Web Development</p>
                                                     <div class="text">We make beautiful sites that are compatible with desktops, laptops, tablets and phones.</div>
                                                 </div>
                                             </div>
@@ -160,19 +168,28 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><p class="icons"><i class="alab-app-development"></i></p></div><p class="title">App Development</p>
+                                                    <div class="box-icon">
+                                                        <p class="icons"><i class="alab-app-development"></i></p>
+                                                    </div>
+                                                    <p class="title">App Development</p>
                                                     <div class="text">Bringing your idea to a mobile specific world brings an ease of use to the consumer.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><p class="icons"><i class="alab-creative-process"></i></p></div><p class="title">Copywriting</p>
+                                                    <div class="box-icon">
+                                                        <p class="icons"><i class="alab-creative-process"></i></p>
+                                                    </div>
+                                                    <p class="title">Copywriting</p>
                                                     <div class="text">We deliver the verbal content that accompanies the visual elements.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><p class="icons"><i class="alab-software"></i></p></div><p class="title">Software</p>
+                                                    <div class="box-icon">
+                                                        <p class="icons"><i class="alab-software"></i></p>
+                                                    </div>
+                                                    <p class="title">Software</p>
                                                     <div class="text">We can design and develop new software, or edit and make existing software better.</div>
                                                 </div>
                                             </div>
@@ -321,7 +338,7 @@
                                             <div class="content-widget">
                                                 <div class="text">NERDISM - (noun)</div>
                                                 <div class="text">The practices or behaviors of nerds; nerdiness.</div>
-                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
+                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/Nerdism_io" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
