--- a/about-us.html
+++ b/about-us.html
@@ -143,7 +143,7 @@
                                             <div class="col-sm-4">
                                                 <div class="heading">Who are you?</div>
                                                 <div class="text">NERDISM - (noun) The practices or behaviors of nerds; nerdiness.</div>
-                                                <div class="text">We are a creative design and development firm in Saint Louis, founded by people who believe that functionality and beauty can be integrated to make something special we can use to further your business or personal brand.</div>
+                                                <div class="text">We are a creative design and development firm in Dallas, TX, founded by people who believe that functionality and beauty can be integrated to make something special we can use to further your business or personal brand.</div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="heading">What we do?</div>
@@ -369,7 +369,7 @@
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
                                                         <li><i class="icons fa fa-map-marker"></i>
-                                                            <p class="link">11519 Craig Ct, St. Louis, MO 63146</p>
+                                                            <p class="link">9400 Wade Blvd, Frisco, TX 75035</p>
                                                         </li>
                                                         <li><i class="icons fa fa-phone"></i>
                                                             <p class="link">(314) 288-9810</p>
@@ -406,7 +406,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy;2017 Nerdism</div>
+                        <div class="text">&copy;2018 Nerdism</div>
                     </div>
                 </div>
             </footer>
