--- a/services.html
+++ b/services.html
@@ -348,8 +348,8 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i><a href="#" class="link">11519 Craig Ct, St.Louis, MO 63146</a></li>
-                                                        <li><i class="icons fa fa-phone"></i><a href="#" class="link">(314)288-9810</a></li>
+                                                        <li><i class="icons fa fa-map-marker"></i>9400 Wade Blvd, Frisco, TX 75035</li>
+                                                        <li><i class="icons fa fa-phone"></i>(314)288-9810</li>
                                                         <li><i class="icons fa fa-envelope-o"></i><a href="mailto:MarkMurphy@Nerdism.io" class="link">Info@Nerdism.io</a></li>
                                                     </ul>
                                                 </div>
@@ -382,7 +382,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy; 2017 Nerdism</div>
+                        <div class="text">&copy; 2018 Nerdism</div>
                     </div>
                 </div>
             </footer>
