--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                                                         <div class="text">Contact us for anything: Question, concern, tech support, love advice . . we are here.</div>
                                                         <div class="border-box-contact"></div>
                                                         <div class="item"><i class="fa fa-map-marker"></i>
-                                                            <p>11519 Craig Ct, St.Louis, MO 63146</p>
+                                                            <p>9400 Wade Blvd, Frisco, TX 75035</p>
                                                         </div>
                                                         <div class="item"><i class="fa fa-phone"></i>
                                                             <p>(314)288-9810</p>
@@ -234,7 +234,7 @@
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
                                                         <li><i class="icons fa fa-map-marker"></i>
-                                                            <p class="link">11519 Craig Ct, St.Louis, MO 63146</p>
+                                                            <p class="link">9400 Wade Blvd, Frisco, TX 75035</p>
                                                         </li>
                                                         <li><i class="icons fa fa-phone"></i>
                                                             <p class="link">(314)288-9810</p>
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy; 2017 Nerdism</div>
+                        <div class="text">&copy; 2018 Nerdism</div>
                     </div>
                 </div>
             </footer>
