--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                                     <div style="color:white;">Consult, question, concern, tech support, love advice . . we are here.</div>
                                                     <div class="border-box-contact"></div>
                                                     <div class="item"><i class=" fa fa-map-marker"></i>
-                                                        <p style="color:white;">11519 Craig Ct, St.Louis, MO 63146</p>
+                                                        <p style="color:white;">9400 Wade Blvd, Frisco, TX 75035</p>
                                                     </div>
                                                     <div class="item"><i class=" fa fa-phone"></i>
                                                         <p style="color:white;">(314)288-9810</p>
@@ -716,7 +716,7 @@
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
                                                         <li><i class="icons fa fa-map-marker"></i>
-                                                            <p class="link">11519 Craig Ct., St. Louis, MO 63146</p>
+                                                            <p class="link">9400 Wade Blvd, Frisco, TX 75035</p>
                                                         </li>
                                                         <li><i class="icons fa fa-phone"></i>
                                                             <p class="link">(314) 288-9810 </p>
@@ -758,7 +758,7 @@
                     </div>
                     <!-- COPYRIGHT -->
                     <div class="footer-copyright">
-                        <div class="text">&copy; 2017 Nerdism</div>
+                        <div class="text">&copy; 2018 Nerdism</div>
                     </div>
                 </div>
             </footer>
