--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                                     <div style="color:white;">Consult, question, concern, tech support, love advice . . we are here.</div>
                                                     <div class="border-box-contact"></div>
                                                     <div class="item"><i class=" fa fa-map-marker"></i>
-                                                        <p style="color:white;">9400 Wade Blvd, Frisco, TX 75035</p>
+                                                        <p style="color:white;">Saint Louis, MO</p>
                                                     </div>
                                                     <div class="item"><i class=" fa fa-phone"></i>
                                                         <p style="color:white;">(314)288-9810</p>
@@ -716,7 +716,7 @@
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
                                                         <li><i class="icons fa fa-map-marker"></i>
-                                                            <p class="link">9400 Wade Blvd, Frisco, TX 75035</p>
+                                                            <p class="link">Saint Louis, MO</p>
                                                         </li>
                                                         <li><i class="icons fa fa-phone"></i>
                                                             <p class="link">(314) 288-9810 </p>
