Location Change / Error Fixes

--- a/services.html
+++ b/services.html
@@ -230,7 +230,7 @@
                                                 <div class="box-number"><span class="number">03</span></div>
                                                 <div class="box-content">
                                                     <div class="title">Fair</div>
-                                                    <div class="text">This isn't just about money . . don't get me wrong, it's a big part . . but we also want to be fair and never take advantage of any person or client. Our decisions impact how we see ourselves and I never want ethical lines crossed purely for profit.</div>
+                                                    <div class="text">This isn't just about money . . don't get me wrong, it's a big part . . but we are fair and never take advantage of any person or client. Our decisions impact how we see ourselves and I never want ethical or moral lines crossed purely for profit.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -348,7 +348,7 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i>9400 Wade Blvd, Frisco, TX 75035</li>
+                                                        <li><i class="icons fa fa-map-marker"></i>Saint Louis, MO</li>
                                                         <li><i class="icons fa fa-phone"></i>(314)288-9810</li>
                                                         <li><i class="icons fa fa-envelope-o"></i><a href="mailto:MarkMurphy@Nerdism.io" class="link">Info@Nerdism.io</a></li>
                                                     </ul>
