--- a/about-us.html
+++ b/about-us.html
@@ -344,7 +344,7 @@
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
                                                         <li><i class="icons fa fa-map-marker"></i>
-                                                            <p class="link">9400 Wade Blvd, Frisco, TX 75035</p>
+                                                            <p class="link">Saint Louis, MO</p>
                                                         </li>
                                                         <li><i class="icons fa fa-phone"></i>
                                                             <p class="link">(314) 288-9810</p>
