--- a/branding.html
+++ b/branding.html
@@ -459,7 +459,7 @@
                                             <div class="content-widget">
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
-                                                        <li><i class="icons fa fa-map-marker"></i>9400 Wade Blvd, Frisco, TX 75035</li>
+                                                        <li><i class="icons fa fa-map-marker"></i>Saint Louis, MO</li>
                                                         <li><i class="icons fa fa-phone"></i>(314)288-9810</li>
                                                         <li><i class="icons fa fa-envelope-o"></i><a href="mailto:info@nerdism.io" class="link">info@Nerdism.io</a></li>
                                                     </ul>
