--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                                                         <div class="text">Contact us for anything: Question, concern, tech support, love advice . . we are here.</div>
                                                         <div class="border-box-contact"></div>
                                                         <div class="item"><i class="fa fa-map-marker"></i>
-                                                            <p>9400 Wade Blvd, Frisco, TX 75035</p>
+                                                            <p>Saint Louis, MO </p>
                                                         </div>
                                                         <div class="item"><i class="fa fa-phone"></i>
                                                             <p>(314)288-9810</p>
@@ -234,7 +234,7 @@
                                                 <div class="info-list">
                                                     <ul class="list-unstyled">
                                                         <li><i class="icons fa fa-map-marker"></i>
-                                                            <p class="link">9400 Wade Blvd, Frisco, TX 75035</p>
+                                                            <p class="link">Saint Louis, MO</p>
                                                         </li>
                                                         <li><i class="icons fa fa-phone"></i>
                                                             <p class="link">(314)288-9810</p>
