--- a/about-us.html
+++ b/about-us.html
@@ -381,7 +381,10 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy;2018 Nerdism</div>
+                        <div class="text">&copy;
+                            <script>
+                                document.write(new Date().getFullYear());
+                            </script> Nerdism</div>
                     </div>
                 </div>
             </footer>
