--- a/index.html
+++ b/index.html
@@ -758,7 +758,10 @@
                     </div>
                     <!-- COPYRIGHT -->
                     <div class="footer-copyright">
-                        <div class="text">&copy; 2018 Nerdism</div>
+                        <div class="text">&copy;
+                            <script>
+                                document.write(new Date().getFullYear());
+                            </script> Nerdism</div>
                     </div>
                 </div>
             </footer>
